<resources>
    <string name="app_name">SavDecor1</string>
    <string name="opened">open</string>
    <string name="closed">close</string>
    <string name="search">جست و جو ...</string>
    <string name="comments">نظرات کاربران</string>
    <string name="add_to_card">افزودن به سبد خرید</string>
    <string name="description">توضیحات</string>
    <string name="similar_product">محصولات مشابه</string>
    <string name="discount_product">محصولات با تخفیف</string>
    <string name="login_and_register">ورود و ثبت نام</string>
    <string name="mobile_number">شماره موبایل</string>
    <string name="password">کلمه عبور</string>
    <string name="forgotten_password"><u>کلمه عبور را فراموش کرده ام</u></string>


    <string name="register"><u>ثبت نام</u></string>
    <string name="login_to_account">ورود به حساب کاربری</string>
    <string name="fname">نام</string>
    <string name="lname">نام خانوادگی</string>
    <string name="empty_card">سبد خرید خالی می باشد</string>
    <string name="delete">حذف</string>
    <string name="final_buy">خرید خود را نهایی کنید</string>
    <string name="about_savdecor">
       ما در اپلیکیشن ساو دکور علاوه بر فروش محصولات این امکان را به شما می دهیم در صورت نیاز به نصاب و
                        مشاهده آلبوم به صورت حضوری با کارشناسان مجرب و حرفه ای در زمینه طراحی و تغییر دکوراسیون منازل و
                        فروشگاه در مدت زمان کوتاه خدمات ارایه می دهیم
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
