<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:orientation="vertical"

    tools:context=".Activities.CardActivity">

    <include layout="@layout/action_bar" />

    <TextView
        android:id="@+id/empty_card"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"

        android:layout_marginTop="100dp"
        android:fontFamily="@font/iransansmobile"
        android:gravity="center"
        android:text="@string/empty_card"
        android:textColor="@color/colorblack"
        android:textSize="14sp"
        android:visibility="visible" />

    <Button

        android:id="@+id/card_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:fontFamily="@font/iransansmobile"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_and_register"
        android:textSize="13sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_total_price"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="52dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edittext_border"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="جمع کل خرید"
                    android:textColor="@color/colorblack" />

                <TextView
                    android:id="@+id/sum_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight=".5"
                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/colorblack" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/edittext_border"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="تخفیف"
                    android:textColor="@color/colorblack"

                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/discount_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"

                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/colorblack"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="قابل پرداخت"
                    android:textColor="@color/colorblack"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/final_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"

                    android:fontFamily="@font/iransansmobile"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/colorblack"
                    android:textSize="10sp" />


            </LinearLayout>
        </LinearLayout>


        <LinearLayout

            android:id="@+id/ll_make_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/edittext_border"

            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".1"
                android:fontFamily="@font/iransansmobile"
                android:padding="10dp"
                android:text=" کد تخفیف"
                android:textColor="@color/colorblack" />

            <EditText
                android:id="@+id/discount_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0.9"
                android:background="@drawable/edittext_border"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorGray"
                android:textDirection="ltr" />

            <Button
                android:id="@+id/discount_btn"
                android:layout_width="50dp"
                android:layout_height="35dp"

                android:layout_marginEnd="5dp"
                android:layout_weight=".1"
                android:fontFamily="@font/iransansmobile"
                android:text="اعمال"
                android:textSize="12sp" />


        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_card_list_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_total_price"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/final_buy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGreen"
        android:fontFamily="@font/iransansmobile"
        android:text="@string/final_buy"
        android:textSize="15sp"
        android:visibility="gone" />

</RelativeLayout>