<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".Activities.ProductDetailActivity">

    <include layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.zolad.zoominimageview.ZoomInImageView
                android:id="@+id/image_path"

                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"

                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/discount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="-40dp"
                android:layout_toStartOf="@id/image_path"
                android:background="@color/colorGreen"
                android:fontFamily="@font/iransansmobile"
                android:padding="3dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:visibility="gone" />

            <!--<ImageView-->
            <!--android:id="@+id/image_path1"-->

            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_centerHorizontal="true"-->

            <!--android:scaleType="fitXY"-->
            <!--/>-->

            <ProgressBar
                android:id="@+id/product_detail_progress"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"

                android:layout_marginRight="50dp"
                android:visibility="visible" />


            <ImageView


                android:id="@+id/favourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/image_path"
                android:layout_margin="10dp"

                android:src="@drawable/favorite0" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_path"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@+id/favourite"
                android:fontFamily="@font/iransansmobile"
                android:text=""

                android:textColor="@color/colorblack"
                android:textDirection="rtl"
                android:textSize="14sp" />

            <Button
                android:id="@+id/comment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:fontFamily="@font/iransansmobile"
                android:text="@string/comments"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment_btn"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorWhite"

                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/discount_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:fontFamily="@font/iransansmobile"
                        android:gravity="center"
                        android:text="22222"
                        android:textColor="@color/colorGreen"
                        android:textDirection="rtl"
                        android:textSize="17dp"
                        android:visibility="gone" />


                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight=".5"
                        android:fontFamily="@font/iransansmobile"
                        android:gravity="center"
                        android:text="160000"
                        android:textColor="@color/colorGreen"
                        android:textDirection="rtl"
                        android:textSize="17dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button

                        android:id="@+id/add_to_card_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="60dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight=".9"
                        android:background="@color/colorGreen"
                        android:fontFamily="@font/iransansmobile"
                        android:text="@string/add_to_card"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:id="@+id/unit_width_height"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/edt_width"
                            android:maxLength="5"

                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/edittext_border"
                            android:fontFamily="@font/iransansmobile"
                            android:gravity="center"
                            android:hint="عرض"
                            android:inputType="numberDecimal"
                            android:textColor="@color/solid_black"
                            android:textColorHint="@color/colorGray"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/edt_height"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/edittext_border"
                            android:fontFamily="@font/iransansmobile"
                            android:gravity="center"
                            android:hint="ارتفاع"
                            android:maxLength="5"
                            android:inputType="numberDecimal"
                            android:textColor="@color/solid_black"
                            android:textColorHint="@color/colorGray"

                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout

                        android:id="@+id/unit_count_and_meter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        android:visibility="gone">


                        <Button


                            android:id="@+id/mines"
                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="15dp"
                            android:background="@color/colorGreen"
                            android:fontFamily="@font/iransansmobile"
                            android:text="-"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/edt_count"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/edittext_border"
                            android:fontFamily="@font/iransansmobile"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="1"

                            android:textColor="@color/solid_black" />

                        <Button


                            android:id="@+id/plus"
                            android:layout_width="30dp"

                            android:layout_height="30dp"


                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="60dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="15dp"
                            android:background="@color/colorGreen"
                            android:fontFamily="@font/iransansmobile"
                            android:text="+"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv"
                android:layout_margin="12dp"

                app:cardBackgroundColor="@color/colorWhite"

                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/iransansmobile"
                    android:text="@string/description"
                    android:textColor="@color/colorblack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/iransansmobile"
                    android:lineSpacingExtra="10dp"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorblack"
                    android:textDirection="rtl"
                    android:textSize="13sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv1"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/colorWhite"

                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/iransansmobile"
                    android:text="@string/similar_product"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView

                android:id="@+id/rcv_similar_product_list_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cv3">

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>